Bug 1627572 - Use an atomic bool for a quick-return check in FilePreferences::IsAllowedPath, r=michal

Differential Revision: https://phabricator.services.mozilla.com/D69976

--HG--
extra : moz-landing-system : lando